--- a/results_factorized.ipynb
+++ b/results_factorized.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataset: Nonfactorized support"
+    "# Dataset: Factorized support"
    ]
   },
   {
